B&L QA/objects/Account_EquipMaster_Junction__c.object
<CustomObject>
    <description>This is a Junction Object between Account and Equipment Master to allow multiple Equipments to be related with an Account and multiple Accounts can be related with one Equipment. Created for KOR SOLTA Users.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Equipment Master</relationshipLabel>
        <relationshipName>Account_EquipMaster_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment Master</label>
        <referenceTo>Equipment_Master__c</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Account_EquipMaster_Relationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>System_Installation_Date__c</fullName>
        <label>System Installation Date</label>
        <type>Date</type>
    </fields>
    <label>Account/EquipMaster Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account/EquipMaster Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>